--- a/registration-form.html
+++ b/registration-form.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information
+    </p>
+
+  </body>
 </html>
