--- a/registration-form.html
+++ b/registration-form.html
@@ -22,8 +22,8 @@
     </fieldset>
 
     <fieldset>
-        <label><input type="radio" /> Personal Account</label>
-        <label><input type="radio" /> Business Account</label>
+        <label><input type="radio" name="account-type" /> Personal Account</label>
+        <label><input type="radio" name="account-type" /> Business Account</label>
         <label><input type="checkbox" required /> I accept the terms and conditions</label>
     </fieldset>
     <fieldset></fieldset>
