--- a/registration-form.html
+++ b/registration-form.html
@@ -22,13 +22,25 @@
     </fieldset>
 
     <fieldset>
-        <label for= "personal-account"><input type="radio" name="account-type" id ="personal-account"/> Personal Account</label>
-        <label for= "business-account"><input type="radio" name="account-type" id="business-account" /> Business Account</label>
-        <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required /> I accept the <a href= "https://www.freecodecamp.org/news/terms-of-service/" >terms and conditions</a></label>
+        <label for="personal-account"><input type="radio" name="account-type" id="personal-account" /> Personal
+            Account</label>
+        <label for="business-account"><input type="radio" name="account-type" id="business-account" /> Business
+            Account</label>
+        <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required /> I accept the <a
+                href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
     </fieldset>
     <fieldset>
         <label>Upload a profile picture: <input type="file" /></label>
         <label>Input your age (years): <input type="number" min="13" max="120" /></label>
+        <label>How did you hear about us?
+            <select>
+                <option value="">(select one)</option>
+                <option value="1">freeCodeCamp News</option>
+                <option value="2">freeCodeCamp YouTube Channel</option>
+                <option value="3">freeCodeCamp Forum</option>
+                <option value="4">Other</option>
+            </select>
+        </label>
     </fieldset>
     <input type="submit" value="Submit">
 </body>
