--- a/registration-form.html
+++ b/registration-form.html
@@ -22,11 +22,11 @@
     </fieldset>
 
     <fieldset>
-        <label for="personal-account"><input type="radio" name="account-type" id="personal-account" /> Personal
+        <label for="personal-account"><input type="radio" name="account-type" id="personal-account"  class='inline'/> Personal
             Account</label>
-        <label for="business-account"><input type="radio" name="account-type" id="business-account" /> Business
+        <label for="business-account"><input type="radio" name="account-type" id="business-account" class='inline' /> Business
             Account</label>
-        <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required /> I accept the <a
+        <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" class='inline' required /> I accept the <a
                 href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
     </fieldset>
     <fieldset>
